--- a/HB realstate.html
+++ b/HB realstate.html
@@ -81,17 +81,29 @@
 					<option value="Parking">Parking</option>								
 				</select>
 
-				<a id="search" href='offer.html'>SEARCH</a>
+				<a id="search" >SEARCH</a>
 			</form>
 		</div>
   </div>
+
+  		<div class="cont">
+  			<div class="house">
+				<img id="img2"src ="images/000.jpg">
+			</div>
+			<div class="tex">
+				<h1 id ="appxt"></h1>
+				<br>
+
+				<h4 id ="car"></h4>
+				<p>121 Madison is a full service building with 24 hour doorman, laundry room, electronic delivery notification, immaculate views on the rooftop terrace, and a beautifully furnished lobby. This historic building is positioned in the heart of NoMad, steps to Madison Square Park, and plenty of celebrated restaurants and lively rooftop bars. As always, all of our buildings welcome pets!
+				<br>
+				<br>
+				<br>
+				Send Us Email at this adress <a href="mailto:bessamhajsalem@gmail.com">hb@realstate.com</a>
+				</p>
+			</div>
+		</div>
   
-<!--   <div class="page2">
-			<h2> Wonderful house</h2>
-			<p id="apptext"></p>here the style of the appended text
-		  <p id="imgapp"></p>
-	</div>
- -->
 
 
 
