our prefinal version

--- a/HB realstate.html
+++ b/HB realstate.html
@@ -88,7 +88,7 @@
 
   		<div class="cont">
   			<div class="house">
-				<img id="img2"src ="images/000.jpg">
+				<img id="img2"src ="#">
 			</div>
 			<div class="tex">
 				<h1 id ="appxt"></h1>
